--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/bootstrap": "^5.0.5",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.19.16",
     "@types/react": "^16.14.3",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.32.7",
     "typescript": "~3.8.2"
   },
   "scripts": {
