--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.0.5",
     "@types/jest": "^24.9.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.19.16",
     "@types/react": "^16.14.3",
     "@types/react-bootstrap": "^0.32.25",
@@ -18,6 +19,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
